--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Courser</title>
+	<title>Hello Coursera!!</title>
 </head>
 <body>
-<h1>Hello Coursera</h1>
+<h1>Hello Coursera. It's a great day</h1>
 </body>
 </html>
